force-app/main/default/objects/Payment_Rate__c/Payment_Rate__c.object-meta.xml
<CustomObject>
    <label>Payment Rate</label>
    <nameField>
        <label>Payment Term Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Rate</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>