force-app/main/default/objects/Payment_Rate__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>