force-app/main/default/objects/Payment_Rate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remark__c</columns>
    <columns>Days__c</columns>
    <columns>Payment_Term_Cost_Rate__c</columns>
    <columns>Payment_Term_Cost_Rate_Subsidiary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>