force-app/main/default/objects/Payment_Rate__c/listViews/MX_AR.listView-meta.xml
<ListView>
    <fullName>MX_AR</fullName>
    <columns>NAME</columns>
    <columns>Payment_Term_Cost_Rate__c</columns>
    <columns>Payment_Term_Cost_Rate_Subsidiary__c</columns>
    <columns>Days__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>AR</value>
    </filters>
    <label>AR</label>
    <sharedTo>
        <group>X5030</group>
        <group>X5070</group>
    </sharedTo>
</ListView>